# pytest-mimesis

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST  Makefile  README.md  README.rst  pyproject.toml  pytest_mimesis.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
pytest_elizabeth/: __init__.py  fixtures.py  plugin.py
pytest_mimesis/: __init__.py  fixtures.py
tests/: conftest.py  test_fixtures.py  test_plugin.py
