[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "pytest_mimesis"
version = "1.0.1"
description = "Mimesis integration with the pytest test runner"

license = "MIT"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>",
  "Líkið Geimfari <likid.geimfari@gmail.com>",
  "Kevin Schellenberg"
]

readme = "README.md"

repository = "https://github.com/pytest-dev/pytest-mimesis"
homepage = "https://github.com/pytest-dev/pytest-mimesis"

keywords = [
  "mimesis",
  "pytest",
  "testing",
  "fixtures",
  "fake data",
  "faker",
  "factory",
  "tests"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
]

[tool.poetry.plugins.pytest11]
mimesis = "pytest_mimesis"


[tool.poetry.dependencies]
python = "^3.6"
pytest = ">=4.2"
mimesis = "^3.1"


[tool.poetry.dev-dependencies]
pytest-cov = "^2.7"
pytest-randomly = "^3.0"
flake8-pytest = "^1.3"
wemake-python-styleguide = "^0.11"
safety = "^1.8"
flake8-pytest-style = "^0.1.3"
tox = "^3.13"
