[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"


[tool.poetry]
name = "pytest_mimesis"
version = "1.2.0"
description = "Mimesis integration with the pytest test runner"

license = "MIT"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>",
  "Líkið Geimfari <likid.geimfari@gmail.com>",
  "Kevin Schellenberg"
]

readme = "README.md"

repository = "https://github.com/pytest-dev/pytest-mimesis"
homepage = "https://github.com/pytest-dev/pytest-mimesis"

keywords = [
  "mimesis",
  "pytest",
  "testing",
  "fixtures",
  "fake data",
  "faker",
  "factory",
  "tests"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
]

[tool.poetry.plugins.pytest11]
mimesis = "pytest_mimesis"


[tool.poetry.dependencies]
python = "^3.6"

pytest = ">=4.2"
mimesis = "^4.0"


[tool.poetry.dev-dependencies]
pytest-cov = "^2.12"
pytest-randomly = "^3.8"

nitpick = "^0.26"
wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.4"

safety = "^1.10"
mypy = "^0.812"
